# tractusx-testlab

./: .gitignore  .tractusx  AGENTS.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES_IDE  INSTALL.md  LICENSE_non-code  NOTICE.md  README.md  mkdocs.yml  mockup-schema-path-assert.html  pyproject.toml  pytest.ini  sonar-project.properties
.github/agents/: testlab-ai-master.agent.md  testlab-architect.agent.md  testlab-docs-master.agent.md  testlab-ide-master.agent.md  testlab-master.agent.md  testlab-test-master.agent.md
.github/architect-kb/: knowledge-base.md
.github/instructions/: ai_generated_code.instructions.md  copilot-instructions.md  ide.instructions.md  python.instructions.md
.github/kb/: architect-kb.md  backend-kb.md  docs-kb.md  ide-kb.md  test-kb.md
.github/session/: policy-blocks-plan.md
.github/workflows/: deploy-docs.yml  release.yml  test.yml
.sonarlint/: connectedMode.json
docs/: README.md  index.md  versions.json
docs/api-reference/: blocks.md  index.md
docs/contributing/: index.md
docs/developer/: ai-development.md  architecture.md  backup.md  block-lifecycle.md  block-system.md  cert-management-test-matrix.md  components.md  data-models.md  index.md  product-scope.md  sonarqube-findings-report.md  state-management.md  sync-layer.md  tutorials.md  ux-proposal-certificate-management.md  yaml-v1-to-v2-migration-guide.md  yaml-v2-variable-migration-plan.md
docs/home/: overview.md
ide/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  poc.html  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
tests/: conftest.py  factories.py  test_base64_codec.py  test_ccm_compile_all.py  test_ccm_integration.py  test_ccm_integration_parsing.py  test_ccm_integration_steps.py  test_ccm_steps.py  test_cli.py  test_cli_inspect.py  test_compile_endpoint.py  test_compiler.py  test_compiler_preconditions.py  test_compiler_rejects_precondition.py  test_connector_cleanup.py  test_connector_do_dsp.py  test_health_endpoint.py  test_infrastructure_parsing.py  test_infrastructure_seeder.py  test_mock_server_integration.py  test_mocks.py  test_models.py  test_parse_kv.py  test_participant_manager.py  test_participants.py  test_path_extraction.py  test_pause.py  test_pause_endpoint.py  test_pause_resume.py  test_pause_resume_events.py  test_precondition_execution.py  test_precondition_models.py  test_precondition_steps.py  test_precondition_steps_policy_contract.py  test_resume.py  test_resume_endpoint.py  test_runner.py  test_schema_assets.py  test_skip_disable.py  test_sse_streaming.py  (+9 more)
(+1584 files in other folders)
