###############################################################
# Eclipse Tractus-X - Tractus-X TestLab
#
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License, Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0.
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations
# under the License.
#
# SPDX-License-Identifier: Apache-2.0
###############################################################

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tractusx-testlab"
version = "0.0.4-alpha"
description = "Library with tools for authoring TCKs for Dataspaces which use Eclipse Tractus-X technology"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "tractusx-sdk (>=0.7.0)",
    "pydantic (>=2.6.0,<3.0.0)",
    "httpx (>=0.26.0,<1.0.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "typer (>=0.15.0,<1.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn (>=0.30.0,<1.0.0)",
    "jsonschema (>=4.20.0,<5.0.0)",
]

[project.scripts]
testlab = "tractusx_testlab.cli:main"

[project.urls]
"Homepage" = "https://eclipse-tractusx.github.io/tractusx-testlab/main/"
"Repository" = "https://github.com/eclipse-tractusx/tractusx-testlab"
"Documentation" = "https://eclipse-tractusx.github.io/tractusx-testlab/main/"
"Issues" = "https://github.com/eclipse-tractusx/tractusx-testlab/issues"
"Changelog" = "https://github.com/eclipse-tractusx/tractusx-testlab/blob/main/CHANGELOG.md"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
build = "^1.2.2"
setuptools = "^78.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.21"
mkdocs-material-extensions = "^1.3.1"
pymdown-extensions = "^10.16.1"
mkdocstrings = { extras = ["python"], version = "^0.30.1" }
mike = "^2.1.3"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["tests"]
